# django-by-example

./: README.md  cert.crt  cert.key  pyproject.toml
account/: authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact_contact_account_con_created_8bdae6_idx.py
account/templates/: base.html
account/templates/account/: dashboard.html  edit.html  login.html  register.html  register_done.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
actions/: models.py  utils.py
actions/migrations/: 0001_initial.py
backend/: psw.py  settings.py  settings_db.py  urls.py
blog/: admin.py  feeds.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py  0004_post_tags.py
blog/templates/blog/: base.html
bookmarks/account/: urls.py  views.py
bookmarks/account/templates/: base.html
bookmarks/bookmarks/: settings.py
cart/: cart.py
images/: forms.py  models.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
mysite/blog/: admin.py  forms.py  models.py  urls.py  views.py
mysite/mysite/: settings.py
orders/: models.py  tasks.py  views.py
orders/migrations/: 0001_initial.py
shop/: models.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_product_options.py
(+24 files in other folders)
