[tool.poetry]
name = "reckoning"
version = "0.1.0"
description = ""
authors = ["Ruslan Sayfullin <ruslansaifullin91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-debug-toolbar = "^3.8.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
celery = "^5.2.7"
pillow = "^9.4.0"
redis = "^4.5.1"
django-taggit = "^3.1.0"
markdown = "^3.4.1"
social-auth-app-django = "^5.2.0"
django-extensions = "^3.2.1"
werkzeug = "^2.2.3"
pyopenssl = "^23.1.1"
easy-thumbnails = "^2.8.5"
flower = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
